.metadata/.plugins/org.eclipse.cdt.ui/Punterooos.build.log

**** Build of configuration Debug for project Punterooos ****

make all 
Building file: ../src/Punterooos.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Punterooos.d" -MT"src/Punterooos.d" -o"src/Punterooos.o" "../src/Punterooos.c"
../src/Punterooos.c: In function ‘main’:
../src/Punterooos.c:29:18: warning: assignment makes integer from pointer without a cast [-Wint-conversion]
src/subdir.mk:18: fallo en las instrucciones para el objetivo 'src/Punterooos.o'
  *apuntadorString=&string;
                  ^
../src/Punterooos.c: At top level:
../src/Punterooos.c:42:6: error: conflicting types for ‘mostrarStringPuntero’
 void mostrarStringPuntero(char* punteroString[],int cantLetras){
      ^
../src/Punterooos.c:15:6: note: previous declaration of ‘mostrarStringPuntero’ was here
 void mostrarStringPuntero(char[],int);
      ^
make: *** [src/Punterooos.o] Error 1
